--- a/articles/4章.md
+++ b/articles/4章.md
@@ -34,11 +34,24 @@
 
 最后怎么跑起来的？
 	
-	修改 utils 中，APP_ID 和  APP_SECRET 换成自己的就好
+	修改 utils const.js 中，APP_ID 和  APP_SECRET 换成自己的就好
 	yes!!!yes!!!
 	不枉我废了这么大力气！！！
 	fuck! fuck!!
 	
+
+我自己的小程序APPID,AppSecret
+
+	wx16593a7f3206b7b7
+	786c5d028f7a63e79f6fa1739dcf2bb3
+
+
+相册测试环境的APPID、appSecre
+
+	wxa5578736514b29e7
+	ab7fab97234a2e96cd5cf742b2da744c
+
+项目里用的是，	相册测试环境的
 
 ## 4-1
 
